--- a/.env
+++ b/.env
@@ -27,6 +27,6 @@ APP_SECRET=19410fe5e69adac97dd4b342c4374c7a
 # IMPORTANT: DATABASE_URL *must* define the server version
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
+ DATABASE_URL="mysql://gaetan:gabu123@127.0.0.1:3306/wild_series?serverVersion=5.7"
+# DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
